--- a/src/css/modules/_articles.css
+++ b/src/css/modules/_articles.css
@@ -545,9 +545,9 @@ section[id] {
 }
 .kpi-color-aloitteet   { border-left-color: #fd7e14 !important; }
 .kpi-color-blogi       { border-left-color: #6f42c1 !important; }
-.kpi-color-esitykset   { border-left-color: #0dcaf0 !important; }
+.kpi-color-esitykset   { border-left-color: #0077b6 !important; }
 .kpi-color-julkaisut   { border-left-color: #198754 !important; }
-.kpi-color-kolumnit    { border-left-color: #20c997 !important; }
+.kpi-color-kolumnit    { border-left-color: #0d9488 !important; }
 .kpi-color-mielipiteet { border-left-color: #0d6efd !important; }
 .kpi-color-puheet      { border-left-color: #dc3545 !important; }
 
